--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 pandas = "^2.2.2"
 openpyxl = "^3.1.5"
 pandas-stubs = "^2.2.2.240603"
+requests-mock = "^1.12.1"
 
 
 [tool.poetry.group.lint.dependencies]
